--- a/ui/src/main/res/values-sk-rSK/strings.xml
+++ b/ui/src/main/res/values-sk-rSK/strings.xml
@@ -7,9 +7,12 @@
     <string name="add_peer">Pridať peera</string>
     <string name="addresses">Adresy</string>
     <string name="applications">Aplikácie</string>
+    <string name="allow_remote_control_intents_summary_off">Externé aplikácie nemôžu spustiť tunely (odporúčané)</string>
+    <string name="allow_remote_control_intents_summary_on">Externé aplikácie môžu spustiť tunely (odporúčané)</string>
     <string name="allow_remote_control_intents_title">Povoliť aplikáciám vzdialenú správu</string>
     <string name="allowed_ips">Povolené IP adresy</string>
     <string name="bad_config_context_top_level">%s</string>
+    <string name="bad_config_error">%1$s v %2$s</string>
     <string name="bad_config_explanation_pka">: Musí byť kladné a nie väčšie ako 65535</string>
     <string name="bad_config_explanation_positive_number">: Musí byť kladné</string>
     <string name="bad_config_explanation_udp_port">: Musí byť platné číslo UDP portu</string>
@@ -37,6 +40,8 @@
     <string name="create_empty">Vytvoriť od počiatku</string>
     <string name="create_from_file">Importovať zo súboru alebo archívu</string>
     <string name="create_from_qr_code">Skenovať z QR kódu</string>
+    <string name="create_output_dir_error">Nepodarilo sa vytvoriť výstupný adresár</string>
+    <string name="create_temp_dir_error">Nepodarilo sa vytvoriť lokálny dočasný priečinok</string>
     <string name="create_tunnel">Vytvoriť tunel</string>
     <string name="copied_to_clipboard">%s skopírované do schránky</string>
     <string name="dark_theme_summary_off">Momentálne používate svetlý (denný) vzhľad</string>
@@ -47,7 +52,10 @@
     <string name="tv_select_a_storage_drive">Vyberte úložnú jednotku</string>
     <string name="tv_no_file_picker">Prosím nainštalujte manažéra súbor aby ste mohli prehliadať súbory</string>
     <string name="tv_add_tunnel_get_started">Pridajte tunel aby ste mohli začať</string>
+    <string name="disable_config_export_title">Zakázať export konfigurácie</string>
+    <string name="disable_config_export_description">Zakázanie exportu konfigurácii spôsobí, že prístup k súkromným kľúčom sa stáva zložitým</string>
     <string name="dns_servers">Servery DNS</string>
+    <string name="dns_search_domains">Prehľadávať domény</string>
     <string name="edit">Upraviť</string>
     <string name="endpoint">Koncový bod</string>
     <string name="error_down">Chyba pri vypínaní tunela: %s</string>
@@ -57,6 +65,7 @@
     <string name="exclude_private_ips">Vynechať privátne IP</string>
     <string name="generate_new_private_key">Generovať nový privátny kľúč</string>
     <string name="generic_error">Neznáma “%s” chyba</string>
+    <string name="hint_automatic">(automatické)</string>
     <string name="hint_generated">(generované)</string>
     <string name="hint_optional">(voliteľné)</string>
     <string name="hint_optional_discouraged">(voliteľné, neodporúča sa)</string>
@@ -71,13 +80,17 @@
     <string name="key_length_explanation_base64">: WireGuard base64 kľúče musia mať 44 charakterov (32 bytes)</string>
     <string name="key_length_explanation_binary">: WireGuard kľúče musia byť 32 bytové</string>
     <string name="key_length_explanation_hex">: WireGuard hex kľúče musia mať 64 charakterov (32 bytes)</string>
+    <string name="listen_port">Otvorený port</string>
     <string name="log_export_error">Nepodarilo sa exportovať log: %s</string>
+    <string name="log_export_subject">WireGuard Android Záznam</string>
     <string name="log_export_success">Uložené do “%s”</string>
     <string name="log_export_title">Exportovať denník udalostí</string>
     <string name="log_saver_activity_label">Uložiť denník udalostí</string>
     <string name="log_viewer_pref_summary">Denník udalosti môžu byt nápomocné pri ladení aplikácie</string>
     <string name="log_viewer_pref_title">Zobraziť denník udalostí aplikácie</string>
-    <string name="module_disabler_enabled_summary">Pomalšie užívatelské prostredie môže zlepšiť stabilitu</string>
+    <string name="log_viewer_title">Denník udalostí</string>
+    <string name="logcat_error">Nepodarilo sa prehrať logcat: </string>
+    <string name="module_enabler_enabled_summary">Pomalšie užívatelské prostredie môže zlepšiť stabilitu</string>
     <string name="module_installer_error">Niečo sa pokazilo. Prosím, skúste znova</string>
     <string name="module_installer_not_found">Pre vaše zariadenie nie sú k dispozícii žiadne moduly</string>
     <string name="module_installer_title">Stiahni a nainštaluj kernel modul</string>
@@ -85,17 +98,22 @@
     <string name="mtu">Maximálna prenosová jednotka</string>
     <string name="multiple_tunnels_summary_off">Zapnutím jedného tunela vypnete ostatné</string>
     <string name="multiple_tunnels_summary_on">Môžu byť zapnuté viaceré tunele naraz</string>
+    <string name="multiple_tunnels_title">Povoliť niekoľko tunel naraz</string>
     <string name="name">Názov</string>
     <string name="no_config_error">Pokúšam sa vyvolať tunel bez konfigurácie</string>
     <string name="no_configs_error">Nenašli sa žiadne konfigurácie</string>
     <string name="no_tunnels_error">Neexistujú žiadne tunely</string>
+    <string name="parse_error_generic">reťazec</string>
     <string name="parse_error_inet_address">IP adresa</string>
     <string name="parse_error_inet_endpoint">koncový bod</string>
     <string name="parse_error_inet_network">IP sieť</string>
     <string name="parse_error_integer">číslo</string>
+    <string name="parse_error_reason">Nedá sa rozobrať %1$s “%2$s”</string>
+    <string name="pre_shared_key">Vopred zdieľaný kľúč</string>
     <string name="pre_shared_key_enabled">povolené</string>
     <string name="private_key">Súkromný kľúč</string>
     <string name="public_key">Verejný kľúč</string>
+    <string name="qr_code_hint">Tip: vygenerovať s `qrencode -t ansiutf8 &lt; tunnel.conf`.</string>
     <string name="restore_on_boot_title">Obnov po štarte</string>
     <string name="save">Uložiť</string>
     <string name="select_all">Označiť všetko</string>
