--- a/ui/src/main/res/values-sl/strings.xml
+++ b/ui/src/main/res/values-sl/strings.xml
@@ -122,16 +122,19 @@
     <string name="create_output_dir_error">Izhodnega imenika ni bilo mogoče ustvariti</string>
     <string name="create_temp_dir_error">Lokalnega začasnega imenika ni bilo mogoče ustvariti</string>
     <string name="create_tunnel">Ustvari tunel</string>
+    <string name="copied_to_clipboard">%s kopirano v odložišče</string>
     <string name="dark_theme_summary_off">V uporabi svetla (dnevna) tema</string>
     <string name="dark_theme_summary_on">V uporabi temna (nočna) tema</string>
     <string name="dark_theme_title">Uporabi temno temo</string>
     <string name="delete">Izbriši</string>
     <string name="tv_delete">Izberi tunel za izbris</string>
+    <string name="tv_select_a_storage_drive">Izberite podatkovni pogon</string>
     <string name="tv_no_file_picker">Prosim namesti orodje za upravljanje datotek za njihov ogled</string>
     <string name="tv_add_tunnel_get_started">Za začetek dodaj tunel</string>
     <string name="disable_config_export_title">Onemogoči izvoz nastavitev</string>
-    <string name="disable_config_export_description">Onemogočavnje nastavitev za izvoz nastavitev naredi tajne kluče manj dostopne</string>
+    <string name="disable_config_export_description">Onemogočenje nastavitev za izvoz nastavitev naredi zasebne ključe manj dostopne</string>
     <string name="dns_servers">Strežniki DNS</string>
+    <string name="dns_search_domains">Pripone DNS</string>
     <string name="edit">Uredi</string>
     <string name="endpoint">Končna točka</string>
     <string name="error_down">Napaka pri zaključevanju tunela: %s</string>
@@ -166,10 +169,10 @@
     <string name="log_viewer_pref_title">Prikaži dnevnik aplikacije</string>
     <string name="log_viewer_title">Dnevnik</string>
     <string name="logcat_error">Ukaza logcat ni bilo mogoče izvesti: </string>
-    <string name="module_disabler_disabled_summary">Eksperimentalni modul jedra lahko izboljša zmogljivost</string>
-    <string name="module_disabler_disabled_title">Omogoči zaledje za modul jedra</string>
-    <string name="module_disabler_enabled_summary">Počasnejše uporabniško zaledje lahko izboljša stabilnost</string>
-    <string name="module_disabler_enabled_title">Onemogoči zaledje za modul jedra</string>
+    <string name="module_enabler_disabled_summary">Eksperimentalni modul jedra lahko izboljša zmogljivost</string>
+    <string name="module_enabler_disabled_title">Omogoči zaledje za modul jedra</string>
+    <string name="module_enabler_enabled_summary">Počasnejše uporabniško zaledje lahko izboljša stabilnost</string>
+    <string name="module_enabler_enabled_title">Onemogoči zaledje za modul jedra</string>
     <string name="module_installer_error">Nekaj je šlo narobe, prosimo poskusite znova</string>
     <string name="module_installer_initial">Eksperimentalni modul jedra lahko izboljša zmogljivost</string>
     <string name="module_installer_not_found">Za vašo napravo ni razpoložljivih modulov</string>
@@ -217,7 +220,7 @@
     <string name="tools_installer_initial_magisk">Namestitev izbirnih orodij za skripte kot modula Magisk</string>
     <string name="tools_installer_initial_system">Namestitev izbirnih orodij za skripte na sistemsko particijo</string>
     <string name="tools_installer_success_magisk">wg in wg-quick kot modul Magisk nameščen (zahtevan ponovni zagon)</string>
-    <string name="tools_installer_success_system">wg und wg-quick nameščena na sistemsko particijo</string>
+    <string name="tools_installer_success_system">wg in wg-quick nameščena na sistemsko particijo</string>
     <string name="tools_installer_title">Namesti orodja za ukazno vrstico</string>
     <string name="tools_installer_working">Nameščam wg in wg-quick</string>
     <string name="tools_unavailable_error">Zahtevana orodja niso na voljo</string>
@@ -237,11 +240,13 @@
     <string name="tunnel_list_placeholder">Dodaj tunel s klikom na modri gumb</string>
     <string name="tunnel_name">Ime tunela</string>
     <string name="tunnel_on_error">Tunela ni bilo mogoče vključiti (wgTurnOn je vrnil %d)</string>
+    <string name="tunnel_dns_failure">Imena DNS gostitelja ni bilo mogoče razrešiti: \"%s\"</string>
     <string name="tunnel_rename_error">Tunela ni bilo mogoče preimenovati: %s</string>
     <string name="tunnel_rename_success">Tunel uspešno preimenovan v „%s“</string>
     <string name="type_name_go_userspace">Uporabniški prostor Go</string>
     <string name="type_name_kernel_module">Modul jedra</string>
     <string name="unknown_error">Neznana napaka</string>
+    <string name="version_summary">Zaledje %1$s %2$s</string>
     <string name="version_summary_checking">Preverjam verzijo zaledja %s</string>
     <string name="version_summary_unknown">Neznana verzija %s</string>
     <string name="version_title">WireGuard za Android v%s</string>
