--- a/ui/src/main/res/values-sv-rSE/strings.xml
+++ b/ui/src/main/res/values-sv-rSE/strings.xml
@@ -49,7 +49,7 @@
     </plurals>
     <plurals name="persistent_keepalive_seconds_unit">
         <item quantity="one">varje sekund</item>
-        <item quantity="other">varje %d sekunder</item>
+        <item quantity="other">var %d sekund</item>
     </plurals>
     <plurals name="persistent_keepalive_seconds_suffix">
         <item quantity="one">sekund</item>
@@ -63,6 +63,7 @@
     <string name="allow_remote_control_intents_summary_on">Externa appar kan växla tunnlar (avancerat)</string>
     <string name="allow_remote_control_intents_title">Tillåt fjärrstyrningsappar</string>
     <string name="allowed_ips">Tillåtna IP-adresser</string>
+    <string name="bad_config_context">%1$s\'s %2$s</string>
     <string name="bad_config_context_top_level">%s</string>
     <string name="bad_config_error">%1$s i %2$s</string>
     <string name="bad_config_explanation_pka">: Måste vara positivt och högst 65535</string>
@@ -78,6 +79,8 @@
     <string name="bad_config_reason_unknown_section">Okänt avsnitt</string>
     <string name="bad_config_reason_value_out_of_range">Värde utanför giltigt intervall</string>
     <string name="bad_extension_error">Filen måste vara .conf eller .zip</string>
+    <string name="error_no_qr_found">QR-kod hittas inte i bilden</string>
+    <string name="error_qr_checksum">QR-kods checksifferkontroll misslyckades</string>
     <string name="cancel">Avbryt</string>
     <string name="config_delete_error">Kan inte ta bort konfigurationsfilen %s</string>
     <string name="config_exists_error">Konfiguration för ”%s” finns redan</string>
@@ -87,6 +90,9 @@
     <string name="config_save_error">Kan inte spara konfigurationen för ”%1$s”: %2$s</string>
     <string name="config_save_success">Konfigurationen för ”%s ” sparades</string>
     <string name="create_activity_title">Skapa WireGuard Tunnel</string>
+    <string name="create_bin_dir_error">Kan inte skapa lokal binärkatalog</string>
+    <string name="create_downloads_file_error">Kan inte skapa fil i nedladdningskatalogen</string>
+    <string name="create_empty">Skapa från grunden</string>
     <string name="create_from_file">Importera från fil eller arkiv</string>
     <string name="create_from_qr_code">Skanna från QR-kod</string>
     <string name="create_output_dir_error">Kan inte skapa utdatakatalog</string>
@@ -104,20 +110,45 @@
     <string name="disable_config_export_title">Inaktivera export av konfiguration</string>
     <string name="disable_config_export_description">Inaktivering av konfigurationsexport gör privata nycklar mindre tillgängliga</string>
     <string name="dns_servers">DNS-servrar</string>
+    <string name="dns_search_domains">Sök domäner</string>
     <string name="edit">Redigera</string>
-    <string name="endpoint">Ändpunkt</string>
+    <string name="endpoint">Slutpunkt</string>
     <string name="error_down">Fel vid nedtagning av tunnel: %s</string>
     <string name="error_fetching_apps">Fel vid hämtning av applista: %s</string>
     <string name="error_root">Vänligen få rootbehörighet och försök igen</string>
+    <string name="error_up">Fel vid uppstart av tunnel: %s</string>
+    <string name="exclude_private_ips">Uteslut privata IP-adresser</string>
+    <string name="generate_new_private_key">Skapa ny privat nyckel</string>
+    <string name="generic_error">Okänt ”%s” fel</string>
+    <string name="hint_automatic">(automatisk)</string>
+    <string name="hint_generated">(skapad)</string>
+    <string name="hint_optional">(valfritt)</string>
+    <string name="hint_optional_discouraged">(valfritt, rekommenderas inte)</string>
+    <string name="hint_random">(slumpmässigt)</string>
+    <string name="illegal_filename_error">Ogiltigt filnamn ”%s”</string>
+    <string name="import_error">Kan inte importera tunnel: %s</string>
+    <string name="import_from_qr_code">Importera tunnel från QR-kod</string>
+    <string name="import_success">Importerade ”%s”</string>
+    <string name="interface_title">Gränssnitt</string>
+    <string name="key_contents_error">Ogiltiga tecken i nyckel</string>
+    <string name="key_length_error">Felaktig nyckellängd</string>
+    <string name="key_length_explanation_base64">: WireGuard base64 nycklar måste vara 44 tecken (32 bytes)</string>
+    <string name="key_length_explanation_binary">: WireGuard nycklar måste vara 32 bytes</string>
+    <string name="key_length_explanation_hex">: WireGuard hex nycklar måste vara 64 tecken (32 bytes)</string>
+    <string name="listen_port">Lyssningsport</string>
+    <string name="log_export_error">Kan inte exportera loggen: %s</string>
+    <string name="log_export_subject">WireGuard Android loggfil</string>
+    <string name="log_export_success">Sparad till ”%s”</string>
+    <string name="log_export_title">Exportera loggfil</string>
     <string name="log_saver_activity_label">Spara logg</string>
-    <string name="log_viewer_pref_summary">Loggar kan hjälpa till med felsökning</string>
+    <string name="log_viewer_pref_summary">Loggfiler kan underlätta vid felsökning</string>
     <string name="log_viewer_pref_title">Visa applikationslogg</string>
     <string name="log_viewer_title">Logg</string>
     <string name="logcat_error">Kunde inte köra logcat: </string>
-    <string name="module_disabler_disabled_summary">Den experimentella kärnmodulen kan förbättra prestanda</string>
-    <string name="module_disabler_disabled_title">Aktivera backend för kärnmodul</string>
-    <string name="module_disabler_enabled_summary">Den långsammare backend för användarrymden kan förbättra stabiliteten</string>
-    <string name="module_disabler_enabled_title">Inaktivera backend för kärnmodul</string>
+    <string name="module_enabler_disabled_summary">Den experimentella kärnmodulen kan förbättra prestanda</string>
+    <string name="module_enabler_disabled_title">Aktivera backend för kärnmodul</string>
+    <string name="module_enabler_enabled_summary">Den långsammare backend för användarrymden kan förbättra stabiliteten</string>
+    <string name="module_enabler_enabled_title">Inaktivera backend för kärnmodul</string>
     <string name="module_installer_error">Något gick fel. Vänligen försök igen</string>
     <string name="module_installer_initial">Den experimentella kärnmodulen kan förbättra prestanda</string>
     <string name="module_installer_not_found">Inga moduler finns tillgängliga för din enhet</string>
@@ -134,23 +165,24 @@
     <string name="no_tunnels_error">Inga tunnlar finns</string>
     <string name="parse_error_generic">sträng</string>
     <string name="parse_error_inet_address">IP-adress</string>
-    <string name="parse_error_inet_endpoint">endpoint</string>
+    <string name="parse_error_inet_endpoint">slutpunkt</string>
     <string name="parse_error_inet_network">IP-nätverk</string>
     <string name="parse_error_integer">nummer</string>
     <string name="parse_error_reason">Kan inte tolka %1$s ”%2$s”</string>
     <string name="peer">Klient</string>
+    <string name="permission_description">styra WireGuard tunnlar, aktivera och inaktivera tunnlar efter behag, möjlighet till felkoppling av internettrafik</string>
     <string name="permission_label">kontrollera WireGuard tunnlar</string>
     <string name="persistent_keepalive">Beständig keepalive</string>
     <string name="pre_shared_key">Fördelad nyckel</string>
     <string name="pre_shared_key_enabled">aktiverad</string>
     <string name="private_key">Privat nyckel</string>
-    <string name="public_key">Publik nyckel</string>
+    <string name="public_key">Offentlig nyckel</string>
     <string name="qr_code_hint">Tips: generera med `qrencode -t ansiutf8 &lt; tunnel.conf`.</string>
     <string name="restore_on_boot_summary_off">Kommer inte ta upp aktiverade tunnlar vid uppstart</string>
     <string name="restore_on_boot_summary_on">Kommer ta upp aktiverade tunnlar vid uppstart</string>
     <string name="restore_on_boot_title">Återställ vid uppstart</string>
     <string name="save">Spara</string>
-    <string name="select_all">Markera alla</string>
+    <string name="select_all">Välj alla</string>
     <string name="settings">Inställningar</string>
     <string name="shell_exit_status_read_error">Shell kan inte läsa avslutningsstatus</string>
     <string name="shell_marker_count_error">Shell förväntade sig 4 markörer, tog emot %d</string>
@@ -158,4 +190,50 @@
     <string name="success_application_will_restart">Framgång. Applikationen kommer nu att starta om…</string>
     <string name="toggle_all">Växla alla</string>
     <string name="toggle_error">Fel vid växling av WireGuard-tunnel: %s</string>
+    <string name="tools_installer_already">wg och wg-quick är redan installerade</string>
+    <string name="tools_installer_failure">Kan inte installera kommandoradsverktyg (ej root?)</string>
+    <string name="tools_installer_initial">Installera valfria verktyg för skriptprogram</string>
+    <string name="tools_installer_initial_magisk">Installera valfria verktyg för skript som Magisk modul</string>
+    <string name="tools_installer_initial_system">Installera valfria verktyg för skriptning till systempartitionen</string>
+    <string name="tools_installer_success_magisk">wg och wg-quick installerat som en Magisk modul (omstart krävs)</string>
+    <string name="tools_installer_success_system">wg och wg-quick installerat i systempartitionen</string>
+    <string name="tools_installer_title">Installera kommandoradsverktyg</string>
+    <string name="tools_installer_working">Installera wg och wg-quick</string>
+    <string name="tools_unavailable_error">Nödvändiga verktyg är inte tillgängliga</string>
+    <string name="transfer">Överföring</string>
+    <string name="transfer_bytes">%d B</string>
+    <string name="transfer_gibibytes">%.2f GiB</string>
+    <string name="transfer_kibibytes">%.2f KiB</string>
+    <string name="transfer_mibibytes">%.2f MiB</string>
+    <string name="transfer_rx_tx">rx: %1$s, tx: %2$s</string>
+    <string name="transfer_tibibytes">%.2f TiB</string>
+    <string name="tun_create_error">Kunde inte skapa tun-enhet</string>
+    <string name="tunnel_config_error">Går inte att konfigurera tunneln (wg-quick returnerade %d)</string>
+    <string name="tunnel_create_error">Kan inte skapa tunnel: %s</string>
+    <string name="tunnel_create_success">Lyckades skapa tunnel “%s”</string>
+    <string name="tunnel_error_already_exists">Tunnel ”%s” finns redan</string>
+    <string name="tunnel_error_invalid_name">Ogiltigt namn</string>
+    <string name="tunnel_list_placeholder">Lägg till en tunnel via blåa knappen</string>
+    <string name="tunnel_name">Tunnelns namn</string>
+    <string name="tunnel_on_error">Kunde inte aktivera tunneln (wgTurnOn returnerade %d)</string>
+    <string name="tunnel_dns_failure">Det går inte att lösa DNS-värdnamn: ”%s”</string>
+    <string name="tunnel_rename_error">Kan inte byta namn på tunnel: %s</string>
+    <string name="tunnel_rename_success">Lyckades döpa om tunnel till “%s”</string>
+    <string name="type_name_go_userspace">Användarutrymme för Go</string>
+    <string name="type_name_kernel_module">Kärnmodul</string>
+    <string name="unknown_error">Okänt fel</string>
+    <string name="version_summary">%1$s bakstycke %2$s</string>
+    <string name="version_summary_checking">Kontrollerar %s backstycke utgåva</string>
+    <string name="version_summary_unknown">Okänd %s utgåva</string>
+    <string name="version_title">WireGuard för Android v%s</string>
+    <string name="vpn_not_authorized_error">VPN-tjänsten är inte godkänd av användaren</string>
+    <string name="vpn_start_error">Kan inte starta Android VPN-tjänst</string>
+    <string name="zip_export_error">Kan inte exportera tunnlar: %s</string>
+    <string name="zip_export_success">Sparad till ”%s”</string>
+    <string name="zip_export_summary">Zip-filen kommer att sparas till nedladdningskatalogen</string>
+    <string name="zip_export_title">Exportera tunnlar till zip-fil</string>
+    <string name="biometric_prompt_zip_exporter_title">Godkänn för att exportera tunnlar</string>
+    <string name="biometric_prompt_private_key_title">Godkänn för att visa tunnelns privata nycklar</string>
+    <string name="biometric_auth_error">Fel vid godkännande</string>
+    <string name="biometric_auth_error_reason">Fel vid godkännande: %s</string>
 </resources>
