--- a/ui/src/main/res/values-ja/strings.xml
+++ b/ui/src/main/res/values-ja/strings.xml
@@ -91,10 +91,11 @@
     <string name="tv_delete">削除するトンネルを選択</string>
     <string name="tv_select_a_storage_drive">ストレージを選択</string>
     <string name="tv_no_file_picker">ファイルを参照するにはファイル管理アプリをインストールしてください</string>
-    <string name="tv_add_tunnel_get_started">トンネルを追加して開始する</string>
+    <string name="tv_add_tunnel_get_started">Add a tunnel to get started</string>
     <string name="disable_config_export_title">設定のエクスポートを無効にする</string>
     <string name="disable_config_export_description">設定のエクスポートを無効にすると、秘密鍵にアクセスされにくくなります</string>
     <string name="dns_servers">DNS サーバ</string>
+    <string name="dns_search_domains">サーチドメイン</string>
     <string name="edit">編集</string>
     <string name="endpoint">エンドポイント</string>
     <string name="error_down">トンネル停止時エラー: %s</string>
@@ -129,10 +130,10 @@
     <string name="log_viewer_pref_title">アプリケーションログを表示</string>
     <string name="log_viewer_title">ログ</string>
     <string name="logcat_error">logcat を実行できません: </string>
-    <string name="module_disabler_disabled_summary">カーネルモジュールは実験的ですがパフォーマンスが向上する可能性があります。</string>
-    <string name="module_disabler_disabled_title">カーネルモジュールバックエンドの有効化</string>
-    <string name="module_disabler_enabled_summary">ユーザースペースバックエンドは低速ですが安定しています。</string>
-    <string name="module_disabler_enabled_title">カーネルモジュールバックエンドの無効化</string>
+    <string name="module_enabler_disabled_summary">カーネルモジュールは実験的ですがパフォーマンスが向上する可能性があります。</string>
+    <string name="module_enabler_disabled_title">カーネルモジュールバックエンドの有効化</string>
+    <string name="module_enabler_enabled_summary">ユーザースペースバックエンドは低速ですが安定しています。</string>
+    <string name="module_enabler_enabled_title">カーネルモジュールバックエンドの無効化</string>
     <string name="module_installer_error">失敗しました. 再度実行してみてください</string>
     <string name="module_installer_initial">実験的カーネルモジュールはパフォーマンスが向上する場合があります</string>
     <string name="module_installer_not_found">このデバイス用のモジュールは利用できません</string>
